--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 --extra-index-url https://packages.dea.ga.gov.au/
 aiohttp
-aiobotocore[boto3,awscli]==1.0.7
+aiobotocore[boto3,awscli]
 pyyaml
 wget
 requests
@@ -17,19 +17,27 @@ gdal
 scipy
 jupyter==1.0.0
 jupyterlab==3.2.0
-ipyleaflet==0.14.0
+ipyleaflet
 folium
-pandas==1.3.4
-numpy==1.18.5
-xarray==0.16.0
+pandas==2.0.0
+numpy
+xarray[complete]==2023.4.2
 matplotlib==3.4.3
 geopandas
 scikit-image
 tqdm
-click<8.0.0
-python-dateutil==2.7.5
+click>8.0.0
+python-dateutil>=2.8.0
 sat-search
+
+dask[array]>=2022.11.1
+dask
+distributed==2023.5.1
 
 # for tests
 pytest
 testbook
+
+openeo
+openeo-processes-dask==2023.5.1
+openeo-processes-dask[implementations]==2023.5.1
